fix: adjust gap size in form layout for improved spacing on larger screens

--- a/styles/components/contact-us.scss
+++ b/styles/components/contact-us.scss
@@ -106,7 +106,7 @@
       }
 
       @media only screen and (min-width: pxToRem(1200)) {
-        gap: pxToRem(46);
+        gap: pxToRem(20);
       }
 
       .form-input {
